# Prosthetic_Eye_Synthesis

./: CMakeCache.txt  CMakeLists.txt  Full_face.off  Full_face.xyz  Makefile  README.md  airplane.xyz  cmake_install.cmake  deluanay_graph  deluanay_graph.cpp  plotter.m  screenshot-1437878963.cam  symmetry  symmetry.cpp  symmetry.hpp  symmetry.hpp~  ui  ui.cpp
ClusterTransformSpace/: CMakeCache.txt  CMakeLists.txt  Cluster0.txt  Cluster1.txt  Cluster10.txt  Cluster2.txt  Cluster3.txt  Cluster4.txt  Cluster5.txt  Cluster6.txt  Cluster7.txt  Cluster8.txt  Cluster9.txt  Makefile(for MeanShift)  MeanShift  MeanShift.cpp  MeanShift.cpp~  cmake_install.cmake  cpp_test.cpp  cpp_test.cpp~  generate_3d_plot.py  generate_3d_plot.py~  symmetry_check  symmetry_check.cpp  transformspace.csv  transformspace_face_vinayak.csv
MeanShift/: Makefile  MeanShift  MeanShift.cpp  a.out  cpp_test.cpp  myfile.gpl  output_text.txt  test3d.csv
